--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ python:
   - "3.6"
 install:
   - pip install -r requirements.txt
+  - pip install coveralls
 # command to run tests
-script: python -m unittest discover
+script: coverage run -m unittest discover -v
 services:
   - redis-server
